[package]
name = "naila_drawbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
image = "0.24.6"
redis = "0.23.0"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.6"
ulid = "1.0.1"
winapi = { version = "0.3.9", features = ["winuser"] }
